--- a/login.html
+++ b/login.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="login.php" method="post">
+    <form action="login.php" method="post" id="formulario">
         <input type="text" name="u_email" placeholder="xxxx@gmail.com"> <br>
         <input type="password" name="u_pssw" placeholder="12dfD." > <br>
         <input type="submit" value="Iniciar sesión">
     </form>
+
 </body>
 </html>
